--- a/conf/userSettings.conf
+++ b/conf/userSettings.conf
@@ -37,7 +37,7 @@ export BIG_BENCH_JAVA="java"
 ## default settings for benchmark
 ## ==========================
 export BIG_BENCH_DEFAULT_DATABASE="bigbench"
-export BIG_BENCH_DEFAULT_ENGINE="hive"
+export BIG_BENCH_DEFAULT_ENGINE="hive2"
 export BIG_BENCH_DEFAULT_MAP_TASKS="80"
 export BIG_BENCH_DEFAULT_SCALE_FACTOR="1000"
 export BIG_BENCH_DEFAULT_NUMBER_OF_PARALLEL_STREAMS="2"
