--- a/engines/hive2/conf/engineSettings.conf
+++ b/engines/hive2/conf/engineSettings.conf
@@ -136,7 +136,7 @@ initQueryEnv () {
     source $LOCAL_QUERY_ENGINE_SETTINGS_CONF_FILE
   fi
 
-  BINARY_PARAMS+=(--hiveconf BENCHMARK_PHASE=$BIG_BENCH_BENCHMARK_PHASE --hiveconf STREAM_NUMBER=$BIG_BENCH_STREAM_NUMBER --hiveconf QUERY_NAME=$QUERY_NAME --hiveconf QUERY_DIR=$QUERY_DIR --hiveconf RESULT_TABLE=$RESULT_TABLE --hiveconf RESULT_DIR=$RESULT_DIR --hiveconf TEMP_TABLE=$TEMP_TABLE --hiveconf TEMP_DIR=$TEMP_DIR --hiveconf TABLE_PREFIX=$TABLE_PREFIX)
+  BINARY_PARAMS+=(--hiveconf BENCHMARK_PHASE=$BIG_BENCH_BENCHMARK_PHASE --hiveconf STREAM_NUMBER=$BIG_BENCH_STREAM_NUMBER --hiveconf QUERY_NAME=$QUERY_NAME --hiveconf QUERY_DIR=$QUERY_DIR --hiveconf RESULT_TABLE=$RESULT_TABLE --hiveconf RESULT_DIR=$RESULT_DIR --hiveconf TEMP_TABLE=$TEMP_TABLE --hiveconf TEMP_DIR=$TEMP_DIR --hiveconf TABLE_PREFIX=$TABLE_PREFIX --hiveconf BIG_BENCH_HDFS_ABSOLUTE_INIT_DATA_DIR=$BIG_BENCH_HDFS_ABSOLUTE_INIT_DATA_DIR --hiveconf BIG_BENCH_hive_default_fileformat_source_table=$BIG_BENCH_hive_default_fileformat_source_table --hiveconf hdfsDataPath=$BIG_BENCH_HDFS_ABSOLUTE_INIT_DATA_DIR --hiveconf tableFormat=$BIG_BENCH_hive_default_fileformat_source_table --hiveconf BIG_BENCH_hive_default_fileformat_result_table=TEXTFILE)
 
   # source run.sh as late as possible to allow run.sh to use all above defined variables
   SCRIPT_FILENAME="$QUERY_DIR/run.sh"
@@ -211,15 +211,15 @@ export BIG_BENCH_hive_default_fileformat_source_table="ORC"
 #"BIG_BENCH_hive_default_fileformat_tmp_table" is used to override "hive.default.fileformat" 
 #(PARQUET is NOT! supported here. This is a limitiation of hive, as hive.default.fileformat only accepts the listed options)
 # => all "CREATE <TEMPORARY> TABLE" statements within the queries will use the specified fileformat during bigbench execution (except the "result" table)
-export BIG_BENCH_hive_default_fileformat_tmp_table="TEXTFILE"
+export BIG_BENCH_hive_default_fileformat_tmp_table="ORC"
 
 #Query result table format
 #do not modify "_result_table" file format! Final query result has to be kept human readable!
 export BIG_BENCH_hive_default_fileformat_result_table="TEXTFILE"
 
 
-BINARY="/usr/bin/hive"
-BINARY_PARAMS=()
+BINARY="beeline"
+BINARY_PARAMS=("-u jdbc:hive2://`hostname -f`:10001/;transportMode=http" -n "" -p "")
 
 #ML framework used to execute ML-algorithm parts of queries (Naive Bayes, KMeans, Logistic regression) 
 #choices: BIG_BENCH_ENGINE_HIVE_ML_FRAMEWORK=[ "spark", "spark-csv" (deprecated), "mahout"(deprecated)} ]
