--- a/conf/bigBench.properties
+++ b/conf/bigBench.properties
@@ -27,7 +27,7 @@
 #No license under any patent, copyright, trade secret or other intellectual property right is granted to or conferred upon you by disclosure or delivery of the Materials, either expressly, by implication, inducement, estoppel or otherwise. Any license under such intellectual property rights must be express and approved by Intel in writing.
 
 pretend_mode=0
-show_command_stdout=0
+show_command_stdout=1
 
 
 # configure the workload the driver performs
@@ -73,7 +73,8 @@ workload=CLEAN_ALL,ENGINE_VALIDATION_DATA_GENERATION,ENGINE_VALIDATION_LOAD_TEST
 # Here the query order of the different phases is defined
 # The format is: phase name pattern + "_" + stream number
 # power_test_0 is the basic list used for shuffling, it must ALWAYS be defined
-power_test_0=1-30
+#power_test_0=1-30
+power_test_0=6,7,9,11,12,13,14,15,16,17,21,22,23,24
 
 # You may specify any number additional properties for the throughput test(s) here
 # They have the form "throughput_test_1_$STREAMNUMBER=..." and "throughput_test_2_$STREAMNUMBER=..."
